--- a/client/default/index.html
+++ b/client/default/index.html
@@ -18,7 +18,10 @@ a new app to the app store.
 -->
 
 <link href="css/style.css" rel="stylesheet" />
-
+<hr />
+<button id='run_button' style="background-color:#ff0000;"> Error </button>
+<button id='run_button' style="background-color:#00ff00;"> Success </button>
+<hr />
 <h1>New Application</h1>
 
 <p> Click on the button below to make a cloud "action" call which will return 
