--- a/client/default/index.html
+++ b/client/default/index.html
@@ -19,8 +19,8 @@ a new app to the app store.
 
 <link href="css/style.css" rel="stylesheet" />
 <hr />
-<button id='run_button' style="background-color:#ff0000;"> Error </button>
-<button id='run_button' style="background-color:#00ff00;"> Success </button>
+<button id='error_button' style="background-color:#ff0000;"> Error </button>
+<button id='success_button' style="background-color:#00ff00;"> Success </button>
 <hr />
 <h1>New Application</h1>
 
